`fix` scrollbar-none

--- a/src/markdown.css
+++ b/src/markdown.css
@@ -63,15 +63,15 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05 overflow-scroll;
 }
 
 .markdown pre {
-  @apply bg-gray-100 rounded p-4  overflow-scroll;
+  @apply bg-gray-100 rounded p-4;
 }
 
 .markdown pre code {
-  @apply block bg-transparent p-0 overflow-visible rounded-none;
+  @apply block bg-transparent p-0 overflow-visible rounded-none overflow-scroll;
 }
 
 .markdown ul {
